Further CSS fixes, image not showing after deployment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -539,11 +539,20 @@ input[type='checkbox'] {
 	margin-top: -5rem;
 	margin-bottom: -5rem;
 	padding-bottom: 1rem;
-	background: url('../images/header-background.jpg');
+
 	background-size: cover;
 	text-align: center;
 	overflow: hidden;
 	
+}
+.header img{
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	overflow: hidden;
+	height: 100vh;
+	width: 100%;
 }
 
 .header .h1-large {
